coh/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coh
  labels:
    app: coh
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: coh
  type: ClusterIP
